Added more publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,3 +18,13 @@
   
   copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
 }
+
+@masterthesis{jorje2022sparse,
+  abbr={UoE2022},
+  title={Online Inverse Dynamics Learning Using Sparse Gaussian Processes},
+  author={Jorge, David},
+  year={2022},
+  month={May},
+  url={https://drive.google.com/file/d/1L1FPC7EIQcZ8hgyWeg5Fk6XVPFqG82GR/view?usp=sharing},
+  pdf={https://drive.google.com/file/d/1L1FPC7EIQcZ8hgyWeg5Fk6XVPFqG82GR/view?usp=sharing},
+  }
