--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,9 @@
   
   publisher = {arXiv},
   
-  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
+  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
+
+  selected = {true}
 }
 
 @masterthesis{jorje2022sparse,
@@ -27,4 +29,6 @@
   month={May},
   url={https://drive.google.com/file/d/1L1FPC7EIQcZ8hgyWeg5Fk6XVPFqG82GR/view?usp=sharing},
   pdf={https://drive.google.com/file/d/1L1FPC7EIQcZ8hgyWeg5Fk6XVPFqG82GR/view?usp=sharing},
+
+  selected = {true}
   }
